# web-api-design

./: .gitignore  client.html  client.rest  main.py  pyproject.toml
routers/: book.py  user.py
