[tool.poetry]
name = "web-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "web_api"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.101.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
